<resources>
    <string name="app_name">Harry Potter Quiz App</string>
    <string name="action_settings">Settings</string>
        <string name="reset">OK, let\'s try again&#8230;</string>
    <string name="action_message">Action</string>
    <string name="result_first">You got </string>
    <string name="result_second_singular">question right!</string>
    <string name="result_second_plural">questions right!</string>
    <string name="result_button">Get Result</string>
    <string name="first_question">What is Dumbledore\'s first name?</string>
    <string name="first_question_hint">His name is&#8230;</string>
    <string name="second_question">What is Voldemort\'s original name?</string>
    <string name="third_question">What are Harry Potter\'s parents\' names?</string>
    <string name="fourth_question">What is professor McGonagall\'s first name?</string>
    <string name="fifth_question">What is Draco Malfoy\'s aunt\'s name?</string>
    <string name="first_q">Albus</string>
    <string name="second_q_1">Tom</string>
    <string name="second_q_2">John</string>
    <string name="second_q_3">Marvolo</string>
    <string name="third_q_1">Lily</string>
    <string name="third_q_2">Liliana</string>
    <string name="third_q_3">George</string>
    <string name="third_q_4">James</string>
    <string name="fourth_q_1">Sterva</string>
    <string name="fourth_q_2">Minerva</string>
    <string name="fourth_q_3">Meduza</string>
    <string name="fifth_q_1">Bathilda Bagshot</string>
    <string name="fifth_q_2">Narcissa Malfoy</string>
    <string name="fifth_q_3">Bellatrix Lestrange</string>
</resources>
